# clientserverrunner_mcp

./: .pre-commit-config.yaml  DEVELOPMENT.md  README.md  REQUIREMENTS.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  microservices_config.json  webapp_config.json
src/clientserverrunner/: __init__.py  __main__.py  config_manager.py  log_manager.py  models.py  port_manager.py  process_manager.py  server.py
src/clientserverrunner/types/: __init__.py  base.py  npm.py  python.py  scala.py
src/clientserverrunner/utils/: logging.py  validation.py
tests/: conftest.py
tests/fixtures/test_apps/npm/: package.json  server.js
tests/fixtures/test_apps/python/: server.py
tests/integration/: test_python_app.py
tests/unit/: test_config_manager.py  test_log_manager.py  test_models.py  test_port_manager.py
