[tool.poetry]
name = "clientserverrunner"
version = "1.0.0"
description = "MCP server for managing multi-application lifecycle"
authors = ["ClientServerRunner Contributors"]
readme = "README.md"
packages = [{include = "clientserverrunner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^0.2.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
psutil = "^6.1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
mypy = "^1.11.0"
ruff = "^0.7.0"
pre-commit = "^4.0.0"
types-psutil = "^6.1.0"

[tool.poetry.scripts]
clientserverrunner = "clientserverrunner.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ISC001",  # Conflicts with ruff formatter
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
    "PTH123",  # Use Path.open() instead of open()
    "SIM102",  # Use single if statement (nested ifs are more readable)
    "SIM105",  # Use contextlib.suppress (explicit is better)
    "SIM115",  # Use context manager (intentional for file handles)
    "DTZ005",  # datetime.now() without timezone (not needed for local times)
    "DTZ007",  # datetime.strptime without timezone (not needed for parsing)
    "RET504",  # Unnecessary assignment before return (can be clearer)
    "RUF005",  # List concatenation (more readable than unpacking in some cases)
    "SIM108",  # Ternary operator (if-else is more readable)
    "PLW0603", # Global statement (necessary for FastMCP globals)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic values are ok in tests
    "S101",     # Assert is ok in tests
    "PT011",    # pytest.raises too broad is ok in tests
    "SIM105",   # contextlib.suppress is ok but not required
]
"tests/fixtures/**/*.py" = [
    "N802",     # Function names in test fixtures can match external APIs
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clientserverrunner.server"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/clientserverrunner",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
